-- 员工地图功能

--- a/jhj-web-user/order/order-rate.html
+++ b/jhj-web-user/order/order-rate.html
@@ -11,24 +11,24 @@
 				</div>
 				<div class="waiter1">
 					<p>到达时间：</p>
-					<span class="waiter1-1" id="rateArrival_0" onclick="doRateArrival(0)">准时</span>
+					<span class="waiter1-2" id="rateArrival_0" onclick="doRateArrival(0)">准时</span>
 					<span class="waiter1-2" id="rateArrival_1" onclick="doRateArrival(1)">迟到</span>
-					<input type="hidden" id="rateArrival"  name="rateArrival" value="0" />
+					<input type="hidden" id="rateArrival"  name="rateArrival" value="" />
 				</div>
 				<div class="waiter1">
 					<p>服务态度：</p>
-					<img src="img/yudingayi/xx.png" id="rateAttitude_1" onclick="doRateAttitude(1)">
-					<img src="img/yudingayi/xx.png" id="rateAttitude_2" onclick="doRateAttitude(2)">
-					<img src="img/yudingayi/xx.png" id="rateAttitude_3" onclick="doRateAttitude(3)">
+					<img src="img/yudingayi/xx1.png" id="rateAttitude_1" onclick="doRateAttitude(1)">
+					<img src="img/yudingayi/xx1.png" id="rateAttitude_2" onclick="doRateAttitude(2)">
+					<img src="img/yudingayi/xx1.png" id="rateAttitude_3" onclick="doRateAttitude(3)">
 					<img src="img/yudingayi/xx1.png" id="rateAttitude_4" onclick="doRateAttitude(4)">
 					<img src="img/yudingayi/xx1.png" id="rateAttitude_5" onclick="doRateAttitude(5)">
 					<input type="hidden" id="rateAttitude"  name="rateAttitude" vaue="3" />
 				</div>
 				<div class="waiter1">
 					<p>服务技能：</p>
-					<img src="img/yudingayi/xx.png" id="rateSkill_1" onclick="doRateSkill(1)">
-					<img src="img/yudingayi/xx.png" id="rateSkill_2" onclick="doRateSkill(2)">
-					<img src="img/yudingayi/xx.png" id="rateSkill_3" onclick="doRateSkill(3)">
+					<img src="img/yudingayi/xx1.png" id="rateSkill_1" onclick="doRateSkill(1)">
+					<img src="img/yudingayi/xx1.png" id="rateSkill_2" onclick="doRateSkill(2)">
+					<img src="img/yudingayi/xx1.png" id="rateSkill_3" onclick="doRateSkill(3)">
 					<img src="img/yudingayi/xx1.png" id="rateSkill_4" onclick="doRateSkill(4)">
 					<img src="img/yudingayi/xx1.png" id="rateSkill_5" onclick="doRateSkill(5)">
 					<input type="hidden" id="rateSkill" name="rateSkill" vaue="3" />
