-- 用户账务明细

--- a/jhj-web-user/user/mine.html
+++ b/jhj-web-user/user/mine.html
@@ -10,11 +10,13 @@
 							<p>{{mobile}}</p>
 						</div>
 						<div class="order-my1">
+							<a href="user/mine-rest-money-detail.html">
 							<ul>
 								<li><img src="img/order-my/my-2.png" alt=""></li>
 								<li>账户余额</li>
 								<li>{{rest_money_span}}</li>
 							</ul>
+							</a>
 							<ul id="mine-coupons">
 								<li><img src="img/order-my/my-12.png" alt=""></li>
 								<li>优惠券</li>
