--- a/jhj-web-user/order/order-rate.html
+++ b/jhj-web-user/order/order-rate.html
@@ -39,14 +39,12 @@
 				<div class="waiter2">
 					<textarea class="waiter2-1" id="rateContent"></textarea>
 				</div>
-				<!-- <div class="waiter3">
+				 <div class="waiter3">
 					<div class="waiter3-1">
-						<a href="#" id="rateFileTrigger">
-							<img src="img/yudingayi/picture.png" alt="">
-							<div class="waiter3-1-1">添加删除图片</div>
-							<input type="file" id="rateImgFile" onchange="setImagePreviews();" accept="image/*" multiple="multiple"
-								style="display: none;">
-						</a>
+						<div class="waiter3-1-1">添加删除图片
+						<img src="img/yudingayi/picture.png" alt="">
+							<input type="file" id="rateImgFile" onchange="setImagePreviews();" accept="image/*" multiple="multiple"/>
+						</div>
 					</div>
 				</div>
 				<div class="waiter4">
@@ -66,7 +64,7 @@
 						<img src="" alt="">
 					</div>
 					<div class="waiter4-2">×</div>
-				</div> -->
+				</div>
 				<div class="waiter5">
 					<div class="all-button13" id="rateSubmit">提交评价</div>
 				</div>
