--- a/jhj-web-user/order/order-cleanbaby-intro.html
+++ b/jhj-web-user/order/order-cleanbaby-intro.html
@@ -8,8 +8,8 @@
 								<div class="shendu-bx-xd">
 									<ul class="shendu-bx-xd1">
 										<li>类别</li>
-										<li>原价</li>
-										<li>折扣价</li>
+										<li>非会员价</li>
+										<li>会员价</li>>
 									</ul>
 									<ul class="shendu-bx-xd11">
 										<li>洁宝宝</li>
