--- a/jhj-web-user/order/order-deep-intro.html
+++ b/jhj-web-user/order/order-deep-intro.html
@@ -11,8 +11,8 @@
 					<div class="shendu-bx-xd" id="serviceAddons">
 						<ul class="shendu-bx-xd1">
 							<li>类别</li>
-							<li>原价</li>
-							<li>折扣价</li>
+							<li>非会员价</li>
+							<li>会员价</li>
 						</ul>
 					</div>
 					<div class="shendu-bx-xd2"><a href="user/charge/mine-charge-list.html" class="special-color2">充值立享更多优惠&nbsp;》</a></div>
