--- a/jhj-web-user/order/order-hour-intro.html
+++ b/jhj-web-user/order/order-hour-intro.html
@@ -9,7 +9,7 @@
 				<div class="shendu-bx-xd">
 					<ul class="shendu-bx-xd1">
 						<li>类别</li>
-						<li>促销价</li>
+						<li>非会员价</li>
 						<li>会员价</li>
 					</ul>
 					<ul class="shendu-bx-xd11">
@@ -26,7 +26,7 @@
 					<p>服务介绍</p>
 				</div>
 				<p class="special-color1">温馨提示：</p>
-				<p class="special-color1">1.金牌保洁3个小时起步，如服务超时将按照50元/小时收费</p>
+				<p class="special-color1">1.金牌保洁3个小时起步，如服务超时将按照非会员50元/小时，会员45元/小时收费</p>
 				<p class="special-color1">2.服务员自带消过毒的5色抹布、清洁剂和清洁工具</p>
 				<p class="special-color1">3.高温消毒后台盆、墙面会有部分水珠残留，属正常现象</p>
 			</div>
