--- a/jhj-web-user/order/order-old-man.html
+++ b/jhj-web-user/order/order-old-man.html
@@ -9,8 +9,8 @@
                 <div class="shendu-bx-xd">
                     <ul class="shendu-bx-xd1">
                         <li>类别</li>
-                        <li>促销价</li>
-                        <li>会员价</li>
+                        <li>非会员价</li>
+						<li>会员价</li>
                     </ul>
 
                     <ul class="shendu-bx-xd11">
