-- 会员消费明细修正

--- a/jhj-web-user/order/order-rate.html
+++ b/jhj-web-user/order/order-rate.html
@@ -39,7 +39,7 @@
 				<div class="waiter2">
 					<textarea class="waiter2-1" id="rateContent"></textarea>
 				</div>
-				 <div class="waiter3">
+				<!--  <div class="waiter3">
 					<div class="waiter3-1">
 						<div class="waiter3-1-1">添加删除图片
 						<img src="img/yudingayi/picture.png" alt="">
@@ -64,7 +64,7 @@
 						<img src="" alt="">
 					</div>
 					<div class="waiter4-2">×</div>
-				</div>
+				</div> -->
 				<div class="waiter5">
 					<div class="all-button13" id="rateSubmit">提交评价</div>
 				</div>
