--- a/jhj-web-user/order/fiveservice/order-cus-hostwork-month.html
+++ b/jhj-web-user/order/fiveservice/order-cus-hostwork-month.html
@@ -10,13 +10,13 @@
                     <div class="shendu-bx-xd">
                         <ul class="shendu-bx-xd1">
                             <li>类别</li>
-                            <li>原价</li>
-                            <li>折扣价</li>
+                            <li>非会员价</li>
+                            <li>会员价</li>
                         </ul>
 
                         <ul class="shendu-bx-xd11">
                             <li>家务包月</li>
-                            <li>596元/1月4次</li>
+                            <li>516元/1月4次</li>
                             <li>499元/1月4次</li>
                         </ul>
                         <div class="shendu-bx-xd2"><a href="user/charge/mine-charge-list.html" class="special-color2">
