--- a/jhj-web-user/order/order-deep-intro.html
+++ b/jhj-web-user/order/order-deep-intro.html
@@ -15,7 +15,7 @@
 							<li>会员价</li>
 						</ul>
 					</div>
-					<div class="shendu-bx-xd2"><a href="user/charge/mine-charge-list.html" class="special-color2">充值立享更多优惠&nbsp;》</a></div>
+					<div class="shendu-bx-xd2"><a href="user/charge/mine-charge-list.html" class="special-color2">充值立享会员价优惠&nbsp;》</a></div>
 				</div>
 				<div id="serviceTypeIntroDiv">
 				
