--- a/jhj-web-user/order/order-user-rate.html
+++ b/jhj-web-user/order/order-user-rate.html
@@ -4,7 +4,7 @@
          	<div id="order-user-rate" class="waiter10" >
          	
          	</div>
-         	<div class="all-button5" id="order-list-more" style="display:none">加载更多</div>
+         	<div class="all-button5" id="order-list-more" >加载更多</div>
 			<input type="hidden" id="page" name="page" value="1" />
             <div id="order-user-rate-temp" class="waiter10" style="display:none;">
                 <div class="waiter10-1">
@@ -12,9 +12,7 @@
                 </div>
                 <div class="waiter10-2">
                     <!-- 图片最多显示两张 -->
-                    <div class="waiter10-2-1">
-                        {head_img}
-                    </div>
+                    {head_img}
                 </div>
                 <ul class="waiter10-3">
                     <li>服务项目：<span>{service_type_name}</span></li>
