--- a/jhj-web-user/order/fiveservice/orde-cook-intro.html
+++ b/jhj-web-user/order/fiveservice/orde-cook-intro.html
@@ -10,17 +10,17 @@
                     <div class="shendu-bx-xd">
                         <ul class="shendu-bx-xd1">
                             <li>类别</li>
-                            <li>原价</li>
-                            <li>折扣价</li>
+                            <li>非会员价</li>
+                            <li>会员价</li>
                         </ul>
 
                         <ul class="shendu-bx-xd11">
                             <li>厨娘烧饭</li>
-                            <li>129元/2小时</li>
                             <li>99元/2小时</li>
+                            <li>90元/2小时</li>
                         </ul>
                         <div class="shendu-bx-xd2"><a href="user/charge/mine-charge-list.html" class="special-color2">
-                            充值立享更多优惠&nbsp;》</a>
+                            充值立享会员价优惠&nbsp;》</a>
                         </div>
                     </div>
                 </div>
