--- a/jhj-web-user/order/order-yuezifang-intro.html
+++ b/jhj-web-user/order/order-yuezifang-intro.html
@@ -10,12 +10,12 @@
 								<div class="shendu-bx-xd">
 									<ul class="shendu-bx-xd1">
 										<li>类别</li>
-										<li>原价</li>
-										<li>折扣价</li>
+										<li>非会员价</li>
+										<li>会员价</li>
 									</ul>
 									<ul class="shendu-bx-xd11">
 										<li>月子房</li>
-										<li>399元/每次</li>
+										<li>349元/每次</li>
 										<li>299元/每次</li>
 									</ul>
 								</div>
