--- a/jhj-web-user/order/order-user-rate.html
+++ b/jhj-web-user/order/order-user-rate.html
@@ -1,36 +1,38 @@
 <div data-page="order-user-rate" class="page">
     <div id="indexPageContentDiv" class="page-content">
         <div class="beijing-index">
-         	<div id="order-user-rate" class="waiter10" >
+         	<div id="order-user-rate">
          	
          	</div>
          	<div class="all-button5" id="order-list-more" >加载更多</div>
 			<input type="hidden" id="page" name="page" value="1" />
-            <div id="order-user-rate-temp" class="waiter10" style="display:none;">
-                <div class="waiter10-1">
-                    <p>服务员：{staff_name}</p>
-                </div>
-                <div class="waiter10-2">
-                    <!-- 图片最多显示两张 -->
-                    {head_img}
-                </div>
-                <ul class="waiter10-3">
-                    <li>服务项目：<span>{service_type_name}</span></li>
-                    <li>服务时间：<span>{service_date_str}</span></li>
-                    <li>到达时间：{rate_arrival}</li>
-                    <li>服务态度：{rate_attitude}</li>
-                    <li>服务技能：{rate_skill}</li>
-                    <li>服务评价：</li><p>{rate_content}</p>
-                </ul>
-                <div class="chongzhi5-kong1"></div>
-                <div class="waiter10-4">
-                	{rate_url}
-                    <!-- <div class="waiter10-4-1"><img src="" alt=""></div>
-                    <div class="waiter10-4-1"><img src="" alt=""></div>
-                    <div class="waiter10-4-1"><img src="" alt=""></div>
-                    <div class="waiter10-4-1"><img src="" alt=""></div> -->
-                </div>
-                <div class="chongzhi5-kong1"></div>
+            <div id="order-user-rate-temp"  style="display:none;">
+            	<div class="waiter10">
+	                <div class="waiter10-1">
+	                    <p>服务员：{staff_name}</p>
+	                </div>
+	                <div class="waiter10-2">
+	                    <!-- 图片最多显示两张 -->
+	                    {head_img}
+	                </div>
+	                <ul class="waiter10-3">
+	                    <li>服务项目：<span>{service_type_name}</span></li>
+	                    <li>服务时间：<span>{service_date_str}</span></li>
+	                    <li>到达时间：{rate_arrival}</li>
+	                    <li>服务态度：{rate_attitude}</li>
+	                    <li>服务技能：{rate_skill}</li>
+	                    <li>服务评价：</li><p>{rate_content}</p>
+	                </ul>
+	                <div class="chongzhi5-kong1"></div>
+	                <div class="waiter10-4">
+	                	{rate_url}
+	                    <!-- <div class="waiter10-4-1"><img src="" alt=""></div>
+	                    <div class="waiter10-4-1"><img src="" alt=""></div>
+	                    <div class="waiter10-4-1"><img src="" alt=""></div>
+	                    <div class="waiter10-4-1"><img src="" alt=""></div> -->
+	                </div>
+	                <div class="chongzhi5-kong1"></div>
+	           </div>
             </div>
         </div>
     </div>
