--- a/jhj-web-user/order/order-list.html
+++ b/jhj-web-user/order/order-list.html
@@ -33,6 +33,10 @@
 							<li>订单金额：</li>
 							<li>{orderPayStr}</li>
 						</ul>
+						<ul class="dingdan">
+							<li>服务人员：</li>
+							<li>{staffNames}</li>
+						</ul>
 				</a>
 				<div class="all-button10" style="display: {doOrderPayStyle}" onclick="doOrderPay($$(this).parent())">
 					去支付
