--- a/jhj-web-user/html/order-waiter-pingjia-wancheng.html
+++ b/jhj-web-user/html/order-waiter-pingjia-wancheng.html
@@ -60,8 +60,9 @@
 								</div>
 								<div class="waiter7-1">
 									<p>个人介绍：</p>
-									<span>自信，耐心，勤奋</span>
+									<div class="waiter7-1-1">自信，耐心，勤奋自信，耐心，勤奋自信，耐心，勤奋自信，耐心，勤奋自信，耐心，勤奋自信，耐心，勤奋自信，耐心，勤奋自信，耐心，勤奋自信，耐心，勤奋</div>
 								</div>
+								<div class="chongzhi5-kong1"></div>
 								<div class="all-button14">预约她</div>
 								<div class="chongzhi5-kong1"></div>
 							</div>
