--- a/jhj-web-user/user/charge/mine-charge-way.html
+++ b/jhj-web-user/user/charge/mine-charge-way.html
@@ -27,6 +27,11 @@
                 <img src="img/youhuiquan/9.png" alt="">
                 <img src="img/youhuiquan/10.png" alt="">
                 <img src="img/youhuiquan/11.png" alt="">
+                <img src="img/youhuiquan/25.png" alt="">
+                <img src="img/youhuiquan/26.png" alt="">
+                <img src="img/youhuiquan/27.png" alt="">
+                <img src="img/youhuiquan/28.png" alt="">
+                <img src="img/youhuiquan/29.png" alt="">
                 <div class="chongzhi5-kong1"></div>
             </div>
             {{/js_compare}}
