--- a/jhj-web-user/order/order-rate-success.html
+++ b/jhj-web-user/order/order-rate-success.html
@@ -39,7 +39,8 @@
 					<p>个人介绍：</p>
 					<div class="waiter7-1-1">{intro}</div>
 				</div>
-				<div class="all-button14" style=""><a href="#" onclick="reOrder({staffId}, '{staffName}')" class="special-color7">预约她</a></div>
+				<div class="chongzhi5-kong1"></div>
+				<div class="all-button14" style=""><a href="#" onclick="reOrder({staffId}, '{staffName}')" style="color:white">预约她</a></div>
 				<div class="chongzhi5-kong1"></div>
 			</div>
 		</div>
