---修改注册优惠券只能用在金牌保洁

--- a/jhj-web-user/user/user-coupons.html
+++ b/jhj-web-user/user/user-coupons.html
@@ -13,7 +13,7 @@
                 <input type="hidden" name="user_coupon_value" id="user_coupon_value" value="{{value}}" />
                 <input type="hidden" name="from_date" id="from_date"  value="{{from_date}}"/>
                 <input type="hidden" name="to_date" id="to_date"  value="{{to_date}}"/>
-                <input type="hidden" name="coupons_type_id" id="coupons_type_id"  value="{{coupons_type_id}}"/>
+               <!--  <input type="hidden" name="coupons_type_id" id="coupons_type_id"  value="{{coupons_type_id}}"/> -->
             </div>
             {{/each}}
         </div>
