--- a/jhj-web-user/html/order-pay-rili.html
+++ b/jhj-web-user/html/order-pay-rili.html
@@ -54,8 +54,8 @@
 								
 								<ul class="xiadan11" style="border:0;">
 									<li><img src="../img/rili/zuobiao.png" alt=""></li>
-									<li style="width:60%;"><div style="width:30%;height:60px;float:left;">地址：</div><label id="" class="tarea1">汉荣家园</label></li>
-									<li style="width:20%;"><img src="../img/rili/tianxie.png" alt=""></li>
+									<li style="width:70%;"><div style="width:25%;height:60px;float:left;">地址：</div><label id="" class="tarea2">汉荣家园2号楼1607</label></li>
+									<li style="width:10%;"><img src="../img/rili/tianxie.png" alt=""></li>
 								</ul>
 							</div>
 							<ul class="order-pay">
