--- a/jhj-web-user/login.html
+++ b/jhj-web-user/login.html
@@ -5,13 +5,13 @@
 			<div class="beijing-index">
 				<ul class="longin-one" style="margin-top: 15px;">
 					<li>
-						<input type="text" id="user_mobile" name="mobile" placeholder="请输入手机号">
+						<input type="number" id="user_mobile" name="mobile" placeholder="请输入手机号">
 					</li>
 					<li id="get_code" class="all-button7">获取验证码</li>
 				</ul>
 				<ul class="longin-one">
 					<li>
-						<input type="text" id="verify_code" name="verify_code" placeholder="请输入验证码">
+						<input type="number" id="verify_code" name="verify_code" placeholder="请输入验证码">
 					</li>
 					<li>没有收到？</li>
 				</ul>
