--- a/jhj-web-user/html/mine-addr-list.html
+++ b/jhj-web-user/html/mine-addr-list.html
@@ -27,9 +27,37 @@
 						
 						<div class="beijing-index">
 							<div class="addr-dizhi-big">
-								<ul class="addr-dizhi">
+								<!-- <ul class="addr-dizhi">
 									<li>北京市海淀区知春路北</li>
-								</ul>
+								</ul> -->
+								<div class="list-block">
+								  <ul>
+								    <li class="swipeout">
+								      <div class="swipeout-content item-content">
+								        <div class="item-inner">北京市海淀区知春路</div>
+								      </div>
+								      <div class="swipeout-actions-right">
+								        <a href="#" class="action1">删除</a>
+								      </div>
+								    </li>
+								    <li class="swipeout">
+								      <div class="swipeout-content item-content">
+								        <div class="item-inner">北京市海淀区知春路</div>
+								      </div>
+								      <div class="swipeout-actions-right">
+								        <a href="#" class="action1">删除</a>
+								      </div>
+								    </li>
+								    <li class="swipeout">
+								      <div class="swipeout-content item-content">
+								        <div class="item-inner">北京市海淀区知春路</div>
+								      </div>
+								      <div class="swipeout-actions-right">
+								        <a href="#" class="action1">删除</a>
+								      </div>
+								    </li>
+								  </ul>
+								</div>
 							</div>
 							<div class="all-button9">添加一个地址</div>
 							
