--- a/jhj-web-user/user/mine-addr-list.html
+++ b/jhj-web-user/user/mine-addr-list.html
@@ -6,16 +6,16 @@
             		<div class="list-block">
 					  <ul>
             		  {{#each data}}
-					    <li class="swipeout">
+					    <li class="swipeout addr-dizhi" onclick="clickToSetDefault(this,{{id}})">
 					      <div class="swipeout-content item-content">
-					        <div class="item-inner">
+					        <div class="item-inner" id="mine-add-addr-link">
 					        {{#js_compare "this.is_default === 1"}}[默认]{{/js_compare}}
 					        {{name}} {{addr}}
 					        </div>
 					      </div>
 					      <div class="swipeout-actions-right">
 					        <a href="#" id="delete-addr" class="swipeout-delete" data-confirm="是否删除地址?" onclick="delAddr(this)">删除</a>
-					        <input type="hidden" id="id" value="{{id}}"/>
+					        <input type="hidden" id="addr_id" value="{{id}}"/>
 					      </div>
 					    </li>
 	                  {{/each}}
