--添加短信通知

--- a/jhj-web-user/order/order-old-index.html
+++ b/jhj-web-user/order/order-old-index.html
@@ -44,7 +44,7 @@
                     </a>
                 </div>
                 <div class="shendu-circle">
-                    <a href="#" class="special-color7">
+                    <a href="order/order-anjubao-intro.html" class="special-color7">
                         <img src="img/wengjiajie/7.png" alt="">
                         <p>安居宝</p>
                     </a>
