--- a/jhj-web-user/order/order-hour-confirm.html
+++ b/jhj-web-user/order/order-hour-confirm.html
@@ -10,11 +10,12 @@
 				<input type="hidden" id="serviceHour" name="serviceHour" value="3">
 				<input type="hidden" id="staffNums" name="staffNums" value="1">
 				<input type="hidden" id="serviceAddons" name="serviceAddons" value="">
-				<input type="hidden" id="orderHourAddrId" name="orderHourAddrId" value="">
+				
 				<input type="hidden" id="serviceDate" name="serviceDate" value="0">
 				<input type="hidden" id="orderMoney" name="orderMoney" value="0">
 				<input type="hidden" id="userCouponId" name="userCouponId" value="0">
 				<input type="hidden" id="userCouponValue" name="userCouponValue" value="0">
+				<input type="hidden" id="orderHourAddrId" value="">
 				<div class="beijing-index">
 					<div class="order-xiadan">
 						<ul class="xiadan">
