--- a/jhj-web-user/order/order-deep-confirm.html
+++ b/jhj-web-user/order/order-deep-confirm.html
@@ -9,11 +9,12 @@
 				<input type="hidden" id="serviceContent" name="serviceContent" value="">
 				<input type="hidden" id="serviceHour" name="serviceHour" value="3">
 				<input type="hidden" id="serviceAddons" name="serviceAddons" value="">
-				<input type="hidden" id="addrId" name="addrId" value="">
+				
 				<input type="hidden" id="serviceDate" name="serviceDate" value="0">
 				<input type="hidden" id="orderMoney" name="orderMoney" value="0">
 				<input type="hidden" id="userCouponId" name="userCouponId" value="0">
 				<input type="hidden" id="userCouponValue" name="userCouponValue" value="0">
+				<input type="hidden" id="orderDeepAddrId" value="">
 				<div class="beijing-index">
 					<div class="order-xiadan">
 						<ul class="xiadan">
