---金牌保洁首页

--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -43,7 +43,7 @@
 mobile_device_detect("http://www.jia-he-jia.com/u/");/*指定跳转地址*/
  </script>
 </head>
-<body>
+<body style="overflow:hidden;">
 	<div class="index-shouye">
 		<div class="index-shouye1">
 			<img src="img/logo.png" alt="">
