---金牌保洁4大项

--- a/jhj-web-user/html/order-jinpai-jichu.html
+++ b/jhj-web-user/html/order-jinpai-jichu.html
@@ -24,7 +24,7 @@
 				<div data-page="order-xiadan"  class="page">
 					
 					<div id="indexPageContentDiv" class="page-content">
-						<img src="../img/jinpaibaojie/order-jinpai1.png" alt="" class="all-img">
+						<img src="../img/jinpaibaojie/order-jinpai2.png" alt="" class="all-img">
 						<div class="beijing-index">
 							<div class="shendu-bx">
 								<a href="order-pay-rili.html"><div class="all-button">立即预约</div></a>
@@ -36,9 +36,9 @@
 									</ul>
 									
 									<ul class="shendu-bx-xd11">
-										<li>金牌保洁</li>
-										<li>149元/3小时</li>
-										<li>135元/3小时</li>
+										<li>基础保洁</li>
+										<li>119元/3小时</li>
+										<li>109元/3小时</li>
 									</ul>
 									<div class="shendu-bx-xd2">
 										充值立享会员价优惠&nbsp;》
@@ -51,7 +51,7 @@
 									<p>服务介绍</p>
 								</div>
 								<p class="special-color1">温馨提示：</p>
-								<p class="special-color1">1.金牌保洁3个小时起步，如服务超时将按照非会员50元/小时，会员45/小时收费</p>
+								<p class="special-color1">1.基础保洁3个小时起步，如服务超时将按照非会员50元/小时，会员45/小时收费</p>
 								<p class="special-color1">2.服务员自带消过毒的5色抹布、清洁剂和清洁工具</p>
 								<p class="special-color1">3.高温消毒后台盆、墙面会有部分水珠残留，属正常现象</p>
 							</div>
@@ -91,39 +91,7 @@
 								<p class="special-color1">2.请根据您的居室情况预定所需服务时间和服务人数</p>
 							</div>
 							<div class="xiantiao"></div>
-							<div class="shendu-bx">
-								<div class="shendu-title" style="clear:both;margin-top:10px;">
-									<div class="shendu-title-1"></div>
-									<p>产品详情</p>
-								</div>
-								<p class="special-color1">这是一家有“洁癖”的家政服务商</p>
-								<p class="special-color1">他们在最难清洁的卫生死角戴白手套拿放大镜做自检！</p>
-								<p>①窗槽</p>
-								<p>②沙发接缝处</p>
-								<p>③茶几二层面及桌腿</p>
-								<p>④灶台与墙的交接处</p>
-								<p>⑤马桶盖与水箱的交接处</p>
-								<p>⑥马桶立面</p>
-								<p>⑦地漏</p>
-								<img class="jinpai-first1" src="../img/jinpaibaojie/order-jinpai5.png" alt="">
-								<p class="special-color1">他们全程使用食品级“泡腾片”加高温蒸汽机做全屋清洁消毒</p>
-								<img class="all-img" src="../img/jinpaibaojie/order-jinpai6.png" alt="">
-								<p class="special-color1">他们把您不留意却经常使用的物品用消毒湿纸巾、消毒水做擦拭清洁</p>
-								<img class="all-img" src="../img/jinpaibaojie/order-jinpai7.png" alt="">
-								<p class="special-color1">他们对自己服务流程有着严格的管控</p>
-								<p style="width:53%;">1.服务前将所有工具，抹布做高温消毒杀菌</p>
-								<p style="width:53%;">2.进屋将自己的拖鞋消毒、自己手部消毒，按规定摆放工具</p>
-								<p style="width:53%;">3.进入厨房，戴一次性鞋套，戴粉色胶皮手套</p>
-								<p style="width:53%;">4.进入洗手间，戴一次性鞋套，戴黄色胶皮手套</p>
-								<p style="width:53%;">5.清洁完成后戴白手套、拿放大镜自查</p>
-								<p style="width:53%;">6.请客户检查</p>
-								<img class="jinpai-first2" src="../img/jinpaibaojie/order-jinpai8.png" alt="">
-								<img class="jinpai-first3" src="../img/jinpaibaojie/order-jinpai9.png" alt="">
-								<span class="jinpai-first4">他们用如此严苛的要求，只为换回您一次满意的好评</span>
-								<div class="chongzhi5-kong3"></div>
-
-							</div>
-							<div class="jinpai" style="clear:both;">
+							<div class="jinpai">
 								<div class="jinpai-biaozhun">
 									<p>细致标准化的服务内容</p>
 									<div class="jinpai-biaozhun1"></div>
@@ -220,7 +188,7 @@
 											<li>地面</li>
 											<li>垃圾桶</li>
 										</ul>
-									</div><!-- 
+									</div>
 									<div class="jinpai-mokuai4">
 										<div class="jinpai-mokuai4-1">
 											<p>为了您全家健康贴心考虑</p>
@@ -233,8 +201,8 @@
 										</div>
 										<p class="jinpai-mokuai4-2">您想到的我们全力做到</p>
 										<p class="jinpai-mokuai4-2" style="text-align:right;padding-bottom:20px;">您没想到的我们也坚持做到！</p>
-									</div> -->
-									<!-- <div class="jinpai-mokuai1">
+									</div>
+									<div class="jinpai-mokuai1">
 										<img src="../img/jinpaibaojie/jinpai-5.png" alt="">
 									</div>
 									<div class="jinpai-mokuai2">
@@ -250,7 +218,7 @@
 											<li></li>
 											<li></li>
 										</ul>
-									</div> -->
+									</div>
 									<div class="jinpai-biaozhun">
 										<p>专属的设备工具</p>
 										<div class="jinpai-biaozhun1"></div>
