--- a/jhj-web-user/html/order-jinpai-te.html
+++ b/jhj-web-user/html/order-jinpai-te.html
@@ -36,9 +36,9 @@
 									</ul>
 									
 									<ul class="shendu-bx-xd11">
-										<li>金牌保洁</li>
-										<li>149元/3小时</li>
-										<li>135元/3小时</li>
+										<li>特惠日金牌保洁</li>
+										<li>145元/3小时</li>
+										<li>129元/3小时</li>
 									</ul>
 									<div class="shendu-bx-xd2">
 										充值立享会员价优惠&nbsp;》
@@ -51,9 +51,10 @@
 									<p>服务介绍</p>
 								</div>
 								<p class="special-color1">温馨提示：</p>
-								<p class="special-color1">1.金牌保洁3个小时起步，如服务超时将按照非会员50元/小时，会员45/小时收费</p>
-								<p class="special-color1">2.服务员自带消过毒的5色抹布、清洁剂和清洁工具</p>
-								<p class="special-color1">3.高温消毒后台盆、墙面会有部分水珠残留，属正常现象</p>
+								<p class="special-color1">1.特惠日服务仅限周一到周三使用</p>
+								<p class="special-color1">2.金牌保洁3个小时起步，如服务超时将按照非会员50元/小时，会员45/小时收费</p>
+								<p class="special-color1">3.服务员自带消过毒的5色抹布、清洁剂和清洁工具</p>
+								<p class="special-color1">4.高温消毒后台盆、墙面会有部分水珠残留，属正常现象</p>
 							</div>
 							<div class="shendu-bx">
 								<div class="shendu-title" style="clear:both;margin-top:10px;">
