--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -52,9 +52,9 @@ mobile_device_detect("http://www.jia-he-jia.com/u/");/*指定跳转地址*/
 			<p>预约服务</p>
 			<img src="img/shouzhi.png" alt="">
 		</div>
-		<div class="index-shouye3">
+		<div class="index-shouye3" >
 			<div class="index-shouye3-1">
-				
+				<iframe src="http://127.0.0.1:8080/u"  frameborder='no' width="215px" height="382px" scrolling="no" seamless></iframe>
 			</div>
 		</div>
 		<ul class="index-shouye4">
