--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -54,7 +54,7 @@ mobile_device_detect("http://www.jia-he-jia.com/u/");/*指定跳转地址*/
 		</div>
 		<div class="index-shouye3" >
 			<div class="index-shouye3-1">
-				<iframe src="http://127.0.0.1:8080/u"  frameborder='no' width="330px" height="450px" scrolling="no" seamless></iframe>
+				<iframe src="../u"  frameborder='no' width="330px" height="450px" scrolling="no" seamless></iframe>
 			</div>
 		</div>
 		<ul class="index-shouye4">
