-- 增加三项保洁服务，下单流程

--- a/jhj-web-user/index.html
+++ b/jhj-web-user/index.html
@@ -30,7 +30,7 @@
 								<p>家政保洁服务</p>
 							</div>
 							<div class="mincircle mincircle1">
-								<a href="order/order-hour-intro.html">
+								<a href="order/order-hour-index.html">
 									<div class="mincircle-one">
 										<p>金牌保洁</p>
 										<p>首单立减10元</p>
