--- a/h5/order-coupons-use.html
+++ b/h5/order-coupons-use.html
@@ -11,62 +11,7 @@
     <link rel="stylesheet" href="css/mobiscroll.custom-2.16.1.min.css">
     <link rel="stylesheet" href="css/my-app.css">
     <script type="text/javascript" src="js/jquery-1.7.2.min.js"></script>
-	<script type="text/javascript">
-		function getParam(param){
-			  var reg = new RegExp("(^|&)"+ param +"=([^&]*)(&|$)");
-			  var r = window.location.search.substr(1).match(reg);
-			  if(r!=null)return  unescape(r[2]); return null;
-		}
-		var couponsId = getParam(getParam("coupons_id"));
-		
-		$("#couponsId").text(couponsId);
-		var html = "";
-		if(couponsId=='4167'){
-			html +="<p class='youhuiquan5-1'>￥</p>"+
-            "<p class='youhuiquan5-2'>20</p>"
-            "<div class='youhuiquan5-3'>全品类型</div>"
-            "<div class='youhuiquan5-4'>有效期:2017-01-12</div>"
-		}
-		if(couponsId=='4168'){
-			html +="<p class='youhuiquan5-1'>￥</p>"+
-            "<p class='youhuiquan5-2'>40</p>"
-            "<div class='youhuiquan5-3'>全品类型</div>"
-            "<div class='youhuiquan5-4'>有效期:2017-01-12</div>"
-		}
-		if(couponsId=='4169'){
-			html +="<p class='youhuiquan5-1'>￥</p>"+
-            "<p class='youhuiquan5-2'>60</p>"
-            "<div class='youhuiquan5-3'>全品类型</div>"
-            "<div class='youhuiquan5-4'>有效期:2017-01-12</div>"
-		}
-		
-		$("#coupons-content").html(html);
-		
-		var reg = /^(( (13[0-9]{1})|(14[0-9]{1})|(15[0-9]{1})|(16[0-9]{1})|(17[0-9]{1})|(18[0-9]{1})|(19[0-9]{1}) )+\d{8})$/;
-		
-		
-		
-		var param = $("#form").serialize();
-		
-		function fn(){
-			var mobile=$("#mobile").val()
-			if(mobile.match(reg)){
-				$.ajax({
-					type:"post",
-					url:"http://jia-he-jia.com/jhj-app/app/user/receive_coupon.json",
-					data:param,
-					success:function(){
-						
-					}
-				});
-			}else{
-				alert("请输入正确的手机号");
-			}
-			
-		}
-		
-		
-	</script>
+	
 </head>
 <body>
 <div class="views">
@@ -101,4 +46,55 @@
     </div>
 </div>
 </body>
+<script type="text/javascript">
+		
+		var url = location.href;
+		var param = url.split("?")[1].split("=")[1];
+		
+		$("#couponsId").text(param);
+		var html = "";
+		if(param==4167){
+			html +="<p class='youhuiquan5-1'>￥</p>"+
+            "<p class='youhuiquan5-2'>20</p>"+
+            "<div class='youhuiquan5-3'>全品类型</div>"+
+            "<div class='youhuiquan5-4'>有效期:2017-01-12</div>"
+		}
+		if(param ==4168){
+			html +="<p class='youhuiquan5-1'>￥</p>"+
+            "<p class='youhuiquan5-2'>40</p>"+
+            "<div class='youhuiquan5-3'>全品类型</div>"+
+            "<div class='youhuiquan5-4'>有效期:2017-01-12</div>"
+		}
+		if(param==4169){
+			html +="<p class='youhuiquan5-1'>￥</p>"+
+            "<p class='youhuiquan5-2'>60</p>"+
+            "<div class='youhuiquan5-3'>全品类型</div>"+
+            "<div class='youhuiquan5-4'>有效期:2017-01-12</div>"
+		}
+		
+		$("#coupons-content").html(html);
+		
+		var reg = /^(( (13[0-9]{1})|(14[0-9]{1})|(15[0-9]{1})|(16[0-9]{1})|(17[0-9]{1})|(18[0-9]{1})|(19[0-9]{1}) )+\d{8})$/;
+		
+		function fn(){
+			var mobile=$("#mobile").val();
+			var url = location.href;
+			var param = url.split("?")[1].split("=")[1];
+			if(mobile.match(reg)){
+				$.ajax({
+					type:"post",
+					url:"http://jia-he-jia.com/jhj-app/app/user/receive_coupon.json",
+					data:{'mobile':mobile,'coupons_id':param},
+					success:function(data){
+						location.href="order-coupons-get.html"
+					}
+				});
+			}else{
+				alert("请输入正确的手机号");
+			}
+			
+		}
+		
+		
+	</script>
 </html>
