--- a/jhj-web-user/index.html
+++ b/jhj-web-user/index.html
@@ -32,7 +32,7 @@
 							<div class="mincircle mincircle1">
 								<a href="order/order-hour-index.html">
 									<div class="mincircle-one">
-										<p>金牌保洁</p>
+										<p>家庭保洁</p>
 										<p>首单立减10元</p>
 										<p>会员享专属优惠</p>
 									</div>
