--- a/jhj-web-user/index.html
+++ b/jhj-web-user/index.html
@@ -23,7 +23,7 @@
 			<div class="pages navbar-through toolbar-through">
 				<div data-page="index" class="page">
 					<div id="indexPageContentDiv" class="page-content">
-						<img src="img/twoyears/10.jpg" alt="" style="width: 100%; padding: 0;">
+						<a href="active/twoyears-active-index.html"><img src="img/twoyears/10.jpg" alt="" style="width: 100%; padding: 0;"></a>
 						<div class="beijing-index">
 							<div class="index-title">
 								<div class="index-title-1"></div>
@@ -240,5 +240,9 @@
 	<script type="text/javascript" src="js/user/mine-rest-money-detail.js"></script>
 	<!-- 我的评论 -->
 	<script type="text/javascript" src="js/order/order-user-rate.js"></script>
+	
+	<!-- 周年庆活动领取优惠券 -->
+	<script type="text/javascript" src="js/active/twoyears-active-coupons.js"></script>
+	
 </body>
 </html>
