--- a/jhj-web-user/index1.html
+++ b/jhj-web-user/index1.html
@@ -20,7 +20,7 @@
 			<div class="pages navbar-through toolbar-through">
 				<div data-page="index" class="page">
 					<div id="indexPageContentDiv" class="page-content">
-						<img src="img/twoyears/10.jpg" alt="" style="width: 100%; padding: 0;">
+						<a href="active/twoyears-active-index.html"><img src="img/twoyears/10.jpg" alt="" style="width: 100%; padding: 0;"></a>
 						<div class="beijing-index">
 							<div class="index-title">
 								<div class="index-title-1"></div>
