--- a/jhj-web-user/active/twoyears-active-coupons.html
+++ b/jhj-web-user/active/twoyears-active-coupons.html
@@ -7,7 +7,7 @@
             <img src="img/twoyears/8.png" alt="" class="all-img6">
             <div class="youhuiquan6">
                 <img src="img/youhuiquan/phone.png" alt="">
-                <input type="text" id="mobile" name="mobile" placeholder="请输入手机号">
+                <input type="text" id="mobile" name="mobile" placeholder="请输入手机号" />
             </div>
             <div class="all-button15" id="get-active-coupons">领取</div>
         </div>
