--周年庆页面

--- a/jhj-web-user/active/twoyears-active-getCoupons.html
+++ b/jhj-web-user/active/twoyears-active-getCoupons.html
@@ -6,7 +6,7 @@
                 <p>恭喜您</p>
                 <p>成功领取优惠券</p>
             </div>
-            <a href=""><div class="all-button15">立即查看</div></a>
+            <a href="user/mine.html"><div class="all-button15" id="look-coupons">立即查看</div></a>
             <a href="active/twoyears-active-index.html"><div class="all-button15">返回</div></a>
         </div>
     </div>
