---充值添加支付宝支付方式

--- a/jhj-web-user/user/charge/mine-charge-way.html
+++ b/jhj-web-user/user/charge/mine-charge-way.html
@@ -3,7 +3,10 @@
         <div class="beijing-index">
             <div class="chongzhi">
                 <p>充值账户：<span id="mobile"></span></p>
-                <p>支付方式：<span>微信支付</span></p>
+                <p>支付方式：
+                	<span id="wexin-pay">微信支付</span>
+                	<span id="zhifubao-pay">支付宝支付</span>
+                </p>
                 <p>推荐人号码：<sapn><input name="staffCode" id="staffCode"  placeholder=""/></span></p>
             </div>
             <div class="chongzhi1">
