--- a/jhj-web-user/order/order-hour-index.html
+++ b/jhj-web-user/order/order-hour-index.html
@@ -6,7 +6,7 @@
 			<div class="beijing-index">
 				<div class="shendu-title">
 					<div class="shendu-title-1"></div>
-					<p>金牌保洁</p>
+					<p>家庭保洁</p>
 				</div>
 				<div class="jinpai-index">
 					<a href="order/order-hour-intro.html?service_type_id=28" >
