--- a/jhj-web-user/user/charge/mine-charge-list.html
+++ b/jhj-web-user/user/charge/mine-charge-list.html
@@ -2,7 +2,7 @@
     <div data-page="mine-charge-list" class="page">
         <div id="indexPageContentDiv" class="page-content">
             <div class="beijing-index">
-                <img src="img/youhuiquan/banner.png" alt="" class="all-img">
+                <img src="img/newYear/8.png" alt="" class="all-img">
                 <div class="chongzhi5">
                     <div class="chongzhi5-kong"></div>
                     {{#each data}}
