---修改静态页面

--- a/jhj-web-user/index.html
+++ b/jhj-web-user/index.html
@@ -23,7 +23,7 @@
 			<div class="pages navbar-through toolbar-through">
 				<div data-page="index" class="page">
 					<div id="indexPageContentDiv" class="page-content">
-						<a href="active/new-year.html"><img src="img/twoyears/10.jpg" alt="" style="width: 100%; padding: 0;"></a>
+						<a href="active/new-year.html"><img src="img/newYear/10.jpg" alt="" style="width: 100%; padding: 0;"></a>
 						<div class="beijing-index">
 							<div class="index-title">
 								<div class="index-title-1"></div>
@@ -33,8 +33,8 @@
 								<a href="order/order-hour-index.html">
 									<div class="mincircle-one">
 										<p>家庭保洁</p>
-										<p>首单立减10元</p>
-										<p>会员享专属优惠</p>
+										<p>原价149元</p>
+										<p>会员独享99元</p>
 									</div>
 									<div class="mincircle-two">
 										<img src="img/indexthree/index-1.png" alt="">
