----修改静态页面

--- a/jhj-web-user/user/charge/mine-charge-way.html
+++ b/jhj-web-user/user/charge/mine-charge-way.html
@@ -7,7 +7,7 @@
                 	<span id="wexin-pay">微信支付</span>
                 	<span id="zhifubao-pay">支付宝支付</span>
                 </p>
-                <p>推荐人号码：<sapn><input name="staffCode" id="staffCode"  placeholder=""/></span></p>
+                <p>推荐人号码：<sapn><input type="tel" name="staffCode" style="padding-left:8px;" id="staffCode"  placeholder="请输入4位推荐码"/></span></p>
             </div>
             <div class="chongzhi1">
                 <p>赠送优惠券</p>
