--- a/jhj-web-user/order/order-hour-index.html
+++ b/jhj-web-user/order/order-hour-index.html
@@ -22,7 +22,7 @@
 						<p style="color: #7ABFFA;">会员109元起</p>
 					</a>
 				</div>
-				<div class="jinpai-index">
+				<!-- <div class="jinpai-index">
 					<a href="order/order-hour-intro.html?service_type_id=69" >
 						<img src="img/jinpaibaojie/jinpai-index-3.png" alt="">
 						<p>特惠日基础保洁</p>
@@ -37,7 +37,7 @@
 						<p style="color: #7ABFFA;">会员129元起</p>
 						<p style="color: #7ABFFA;">限周一到周三使用</p>
 					</a>
-				</div>
+				</div> -->
 			</div>
 		</div>
 	</div>
