--修改优惠券

--- a/jhj-web-user/user/user-coupons.html
+++ b/jhj-web-user/user/user-coupons.html
@@ -9,7 +9,7 @@
 	                <b id="coupons-status">{status}</b>
 	                <div class="youhuiquan2">{value}</div>
 	                <p>{service_type_name}</p>
-	                <div class="youhuiquan8">{max_value}</div>
+	                <div class="youhuiquan8">{maxvalue}</div>
 	                <div class="youhuiquan3">{from_date_str}至{to_date_str}</div>
 	                <input type="hidden" name="user_coupon_id" id="user_coupon_id" value="{id}" />
 	                <input type="hidden" name="service_type" id="service_type" class="service_type" value="{service_type}"/>
