--- a/jhj-web-user/index1.html
+++ b/jhj-web-user/index1.html
@@ -9,6 +9,7 @@
 <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
 <meta http-equiv="Pragma" content="no-cache" />
 <meta http-equiv="Expires" content="0" />
+<meta name = "format-detection" content = "telephone=no">
 <title>叮当到家</title>
 <link rel="stylesheet" href="css/framework7.ios.min.css">
 <link rel="stylesheet" href="css/mobiscroll.custom-2.16.1.min.css">
