--- a/jhj-web-user/user/charge/mine-charge-list.html
+++ b/jhj-web-user/user/charge/mine-charge-list.html
@@ -3,7 +3,7 @@
         <div id="indexPageContentDiv" class="page-content">
             <div class="beijing-index">
             	<!-- img/youhuiquan/banner.png -->
-                <img src="img/newYear/8.jpg" alt="" class="all-img">
+                <img src="img/newYear/11.png" alt="" class="all-img">
                 <div class="chongzhi5">
                     <div class="chongzhi5-kong"></div>
                     {{#each data}}
@@ -16,9 +16,9 @@
                             <li>{{send_money}}元现金优惠券</li>
                             {{/js_compare}}
                             {{#js_compare "this.card_value==500"}}
-                            <li>充值500元就送金牌会员</li>
-                            <li>会员独享</li>
-                            <li>99元3小时金牌保洁</li>
+                            <li>充值500元</li>
+                            <li>赠</li>
+                            <li>金牌会员</li>
                             {{/js_compare}}
                         </ul>
                        
