--- a/jhj-web-user/index1.html
+++ b/jhj-web-user/index1.html
@@ -21,7 +21,7 @@
 			<div class="pages navbar-through toolbar-through">
 				<div data-page="index" class="page">
 					<div id="indexPageContentDiv" class="page-content">
-						<a href="active/new-year.html"><img src="img/newYear/10.jpg" alt="" style="width: 100%; padding: 0;"></a>
+						<img src="img/indexthree/banner.png" alt="" style="width: 100%; padding: 0;">
 						<div class="beijing-index">
 							<div class="index-title">
 								<div class="index-title-1"></div>
