--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -50,11 +50,11 @@ mobile_device_detect("http://www.jia-he-jia.com/u/");/*指定跳转地址*/
 		</div>
 		<div class="index-shouye2">
 			<p>预约服务</p>
-			<img src="img/shouzhi.png" alt="">
+			<img src="img/shouzhi1.png" alt="">
 		</div>
 		<div class="index-shouye3" >
 			<div class="index-shouye3-1">
-				<iframe src="../u"  frameborder='no' width="300px" height="480px" scrolling="no" seamless></iframe>
+				<iframe src="../u"  frameborder='no' width="262px" height="467px" scrolling="no" seamless></iframe>
 			</div>
 		</div>
 		<ul class="index-shouye4">
@@ -63,11 +63,11 @@ mobile_device_detect("http://www.jia-he-jia.com/u/");/*指定跳转地址*/
 			<a href="hangyezixun.html"><li>品质生活专区</li></a>
 		</ul>
 		<div class="index-shouye5">
-			<img src="img/erweima1.png" alt="">
+			<img src="img/erweima2.png" alt="">
 		</div>
 		<ul class="index-shouye6">
-			<li class="special-color">关注叮当到家微信公众号</li>
-			<li class="special-color">享更多优惠</li>
+			<li class="special-color2">关注叮当到家微信公众号</li>
+			<li class="special-color2">享更多优惠</li>
 		</ul>
 		<div class="index-shouye7">
 			<ul class="index-shouye7-1">
