--  更新只有余额支付才能使用会员价

--- a/jhj-web-user/order/order-hour-confirm.html
+++ b/jhj-web-user/order/order-hour-confirm.html
@@ -13,6 +13,7 @@
 				
 				<input type="hidden" id="serviceDate" name="serviceDate" value="0">
 				<input type="hidden" id="orderMoney" name="orderMoney" value="0">
+				<input type="hidden" id="orderOriginMoney" name="orderOriginMoney" value="0">
 				<input type="hidden" id="userCouponId" name="userCouponId" value="0">
 				<input type="hidden" id="userCouponValue" name="userCouponValue" value="0">
 				<input type="hidden" id="orderHourAddrId" value="">
