--- a/jhj-web-user/order/order-list.html
+++ b/jhj-web-user/order/order-list.html
@@ -50,6 +50,7 @@
 				<input type="hidden" id="orderNo" name="orderNo" value="{orderNo}" />
 				<input type="hidden" id="orderId" name="orderId" value="{orderId}" />
 				<input type="hidden" id="orderPay" name="orderPay" value="{orderPay}" />
+				<input type="hidden" id="orderOriginPay" name="orderOriginPay" value="{orderOriginPay}" />
 				<input type="hidden" id="userCouponId" name="userCouponId" value="{userCouponId}" />
 				<input type="hidden" id="userCouponValue" name="userCouponValue" value="{userCouponValue}" />
 				<input type="hidden" id="staffNames" name="staffNames" value="{staffNames}" />
