-- 修正补差价

--- a/jhj-web-user/order/order-pay.html
+++ b/jhj-web-user/order/order-pay.html
@@ -20,7 +20,7 @@
 					<li class="special-color3" id="orderMoneyStrLi">￥0元</li>
 				</ul>
 				<ul class="order-pay">
-					<li>支付方式(<font color="red">使用余额支付才能享受会员价</font>)</li>
+					<li>支付方式<font color="red" style="font-size:11px">(使用余额支付才能享受会员价)</font></li>
 				</ul>
 				<div class="order-xiadan">
 					<ul id="select-restpay" class="xiadan11">
