--- a/jhj-web-user/active/twoyears-active-oneHot.html
+++ b/jhj-web-user/active/twoyears-active-oneHot.html
@@ -6,7 +6,7 @@
                 <p style="color:#9B9B9B;">未成功，抱歉！已抢光！</p>
                 <p style="color:#9B9B9B;">返回看看别的活动</p>
             </div>
-            <a href="active/new-year.html"><div class="all-button15">返回</div></a>
+            <a href="/u"><div class="all-button15">返回</div></a>
         </div>
     </div>
 </div>
