--- a/jhj-web-user/order/deepIntro/order-deep-intro-53.html
+++ b/jhj-web-user/order/deepIntro/order-deep-intro-53.html
@@ -15,12 +15,12 @@
         <div class="shendu-title-1"></div>
         <p>服务内容</p>
     </div>
-    <p>新居开荒流程</p>
-    <p>1.厨房除油、去污、油烟机灶台清洗、全屋高温杀菌</p>
+    <p>房屋大扫除流程：</p>
+    <p>1.厨房除油、去污、油烟机灶台清洗（表面）、全屋高温杀菌</p>
     <p>2.卫生间除垢、去污渍、全屋高温杀菌</p>
     <p>3.室内外玻璃擦拭</p>
     <p>4.卧室整理清洁</p>
-    <p>5.客厅、餐厅整理清洁、冰箱、洗衣机清洗</p>
+    <p>5.客厅、餐厅整理清洁、冰箱、洗衣机清洗（表面）</p>
     <p>6.阳台除尘清洁</p>
     <img src="img/fangwu/fangwu1.png" alt="" class="all-img4">
     <img src="img/fangwu/fangwu2.png" alt="" class="all-img4">
